# NYPropertyTaxLedger

./: .gitignore  README.md  README4LOADER.md  app.py  pyproject.toml  requirements.txt
ny_property_tax_ledger/: __init__.py  cli_chatbot.py  config.py  connect.py  graph.py  load_tax_pdfs.py  pdf_extract.py  property_ledger.py  query_examples.py  tax_pdf_to_cypher.py  verify_property_ledger.py
