[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nypropertytaxledger"
version = "0.1.0"
description = "Blockchain-style property tax PDF loader and Neo4j reporting utilities."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Wei Zhang" }
]
dependencies = [
  "streamlit",
  "langchain==1.2.12",
  "langchain-openai==1.1.11",
  "langchain-neo4j==0.8.0",
  "langgraph==1.1.2",
  "neo4j>=5.28",
  "pydantic",
  "pdfplumber",
]

[project.scripts]
nypropertytaxledger-load-pdfs = "ny_property_tax_ledger.load_tax_pdfs:main"
nypropertytaxledger-verify-ledger = "ny_property_tax_ledger.verify_property_ledger:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["ny_property_tax_ledger"]
